--- a/chromeConversion/index.html
+++ b/chromeConversion/index.html
@@ -4,20 +4,40 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="headerOne">Conversion</h1>
+    <h2 id="headerOne">Convert!</h2>
     <form>
 
-      <select>
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="opel">Opel</option>
-        <option value="audi">Audi</option>
+      <input id ='num' type="text">
+
+      <select id="from">
+        <option value="cm">cm</option>
+        <option value="inch">inch</option>
+        <option value="meters">meters</option>
+        <option value="miles">miles</option>
+        <option value="yards">yards</option>
+        <!-- <option value="Celsius">Celsius</option>
+        <option value="Fahrenheit">Fahrenheit</option> -->
       </select>
+      <p>To:</p>
+      <select id="to">
+        <option value="feet">feet</option>
+        <option value="inch">inch</option>
+        <option value="meters">meters</option>
+        <option value="miles">miles</option>
+        <option value="yards">yards</option>
+     <!-- <option value="Celsius">Celsius</option>
+        <option value="Fahrenheit">Fahrenheit</option> -->
+
+      </select>
+
+
+
       <p id="answer"></p>
 
      </form>
 
+     <button id="dropbtn">Convert!</button>
 
-    <script src="main.js" async defer></script>
+    <script src="main.js"></script>
   </body>
 </html>
